--- a/index.html
+++ b/index.html
@@ -141,29 +141,28 @@
             color: white; font-size: 11px; font-weight: 600; padding: 2px 5px; border-radius: 4px;
         }
         .song-info { display: flex; flex-direction: column; gap: 4px; flex-grow: 1; min-width: 0; }
-        .song-title { font-size: 16px; font-weight: 600; color: var(--text-primary); }
+        .song-title { font-size: 16px; font-weight: 600; color: var(--text-primary); cursor: pointer; }
         .song-model-tag {
             background-color: var(--border); color: var(--text-secondary); font-size: 11px;
             font-weight: 600; padding: 2px 6px; border-radius: 4px; display: inline-block; margin-left: 8px; vertical-align: middle;
         }
         .song-style { font-size: 14px; color: var(--text-secondary); word-break: break-word; }
         .song-style-content.collapsed {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
+            overflow: hidden; text-overflow: ellipsis;
+            display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;
         }
         .toggle-description-btn {
             background: none; border: none; color: var(--accent-blue-hover); cursor: pointer;
             font-size: 12px; padding: 4px 0; font-weight: 600;
         }
-        .download-button {
+        .song-actions { display: flex; flex-direction: column; align-items: flex-start; gap: 8px; }
+        .action-button {
             background-color: #21262d; color: var(--text-primary); border: 1px solid var(--border);
             text-decoration: none; padding: 6px 12px; border-radius: 6px; font-size: 13px;
             font-weight: 500; transition: background-color 0.2s, color 0.2s; white-space: nowrap; cursor: pointer;
+            width: 100%;
         }
-        .download-button:hover { background-color: #30363d; }
+        .action-button:hover { background-color: #30363d; }
         #empty-list-message { color: var(--text-secondary); text-align: center; padding: 20px; }
         .progress-bar-container { width: 100%; background-color: var(--border); border-radius: 4px; height: 6px; overflow: hidden; margin-top: 8px; }
         .progress-bar-inner { width: 0%; height: 100%; background-color: var(--accent-blue); transition: width 0.5s ease; }
@@ -190,6 +189,7 @@
             width: 14px; height: 14px; background: var(--text-primary);
             border-radius: 50%; cursor: pointer;
         }
+
         #login-overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background-color: rgba(14, 17, 23, 0.95);
@@ -217,6 +217,28 @@
         #login-error-message {
             color: var(--accent-red); margin-top: 12px;
             height: 16px; font-size: 14px;
+        }
+
+        #lyrics-modal-overlay {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background-color: rgba(14, 17, 23, 0.85); backdrop-filter: blur(5px);
+            display: none; justify-content: center; align-items: center; z-index: 2000;
+            animation: fadeIn 0.3s;
+        }
+        #lyrics-modal-box {
+            background-color: var(--bg-card); padding: 24px;
+            border-radius: 8px; border: 1px solid var(--border);
+            width: 90%; max-width: 600px; max-height: 80vh;
+            display: flex; flex-direction: column;
+        }
+        #lyrics-modal-content {
+            overflow-y: auto; line-height: 1.6; white-space: pre-wrap;
+            padding-right: 10px;
+        }
+        #lyrics-modal-close {
+            align-self: flex-end; background: none; border: none;
+            color: var(--text-secondary); font-size: 24px; cursor: pointer;
+            line-height: 1; margin: -12px -12px 12px 0;
         }
 
         @media (max-width: 900px) { .page-container { grid-template-columns: 1fr; } .main-card, .library-card { grid-column: auto; } }
@@ -292,7 +314,7 @@
                     <img id="player-cover" src="" alt="cover">
                     <div id="player-info">
                         <div id="player-title"></div>
-                        <input type="range" id="seek-bar" value="0" step="1">
+                        <input type="range" id="seek-bar" value="0" step="0.1">
                     </div>
                     <div id="player-controls">
                         <span id="current-time" class="time-display">0:00</span>
@@ -306,6 +328,13 @@
         </div>
     </div>
 
+    <div id="lyrics-modal-overlay">
+        <div id="lyrics-modal-box">
+            <button id="lyrics-modal-close">&times;</button>
+            <div id="lyrics-modal-content"></div>
+        </div>
+    </div>
+
 <script>
     // --- ГЛОБАЛЬНЫЕ ПЕРЕМЕННЫЕ ---
     const SECRET_KEY = 'messisipi'; // <<< !!! ИЗМЕНИТЕ ЭТОТ КЛЮЧ НА СВОЙ !!!
@@ -316,6 +345,7 @@
     const customModeToggle=document.getElementById("g-customMode"),simpleModeFields=document.getElementById("simple-mode-fields"),customModeFields=document.getElementById("custom-mode-fields"),modelValueInput=document.getElementById("g-model-value"),selectButton=document.getElementById("select-model-button"),selectDropdown=document.getElementById("select-model-dropdown"),styleTextarea=document.getElementById("g-style"),promptTextarea=document.getElementById("g-prompt"),instrumentalToggle=document.getElementById("g-instrumental"),promptGroup=document.getElementById("g-prompt-group"),descriptionGroup=document.getElementById("g-song-description-group"),statusContainer=document.getElementById("status-container"),songListContainer = document.getElementById('song-list-container'), emptyListMessage = document.getElementById('empty-list-message'), logsNotificationDot = document.getElementById('logs-notification-dot');
     const globalPlayer={container:document.getElementById("global-player-container"),audio:document.getElementById("global-audio-player"),cover:document.getElementById("player-cover"),title:document.getElementById("player-title"),seekBar:document.getElementById("seek-bar"),playPauseBtn:document.getElementById("play-pause-btn"),currentTime:document.getElementById("current-time"),totalDuration:document.getElementById("total-duration"),currentSongId:null};
     const loginElements = { overlay: document.getElementById('login-overlay'), container: document.getElementById('app-container'), input: document.getElementById('access-key-input'), button: document.getElementById('access-key-button'), error: document.getElementById('login-error-message') };
+    const lyricsModal = { overlay: document.getElementById('lyrics-modal-overlay'), content: document.getElementById('lyrics-modal-content'), closeBtn: document.getElementById('lyrics-modal-close') };
 
     function formatTime(seconds) { if(isNaN(seconds)||seconds===null||!isFinite(seconds))return'--:--';const m=Math.floor(seconds/60),s=Math.floor(seconds%60);return`${m}:${s<10?"0":""}${s}`;}
 
@@ -368,15 +398,33 @@
         } finally { setTimeout(() => { button.textContent = originalText; button.style.cursor = 'pointer'; }, 1000); }
     }
 
+    function showLyrics(promptText) {
+        lyricsModal.content.textContent = promptText;
+        lyricsModal.overlay.style.display = 'flex';
+    }
+    lyricsModal.closeBtn.onclick = () => lyricsModal.overlay.style.display = 'none';
+    lyricsModal.overlay.onclick = (e) => { if (e.target === lyricsModal.overlay) lyricsModal.overlay.style.display = 'none'; };
+
+    function copyToClipboard(text, element) {
+        navigator.clipboard.writeText(text).then(() => {
+            const originalText = element.textContent;
+            element.textContent = 'Скопировано!';
+            setTimeout(() => { element.textContent = originalText; }, 1500);
+        });
+    }
+
     function addSongToList(songData, requestParams) {
         if (emptyListMessage) emptyListMessage.style.display = 'none';
         const card = document.createElement('div'); card.className = 'song-card'; card.id = `song-${songData.id}`;
         let friendlyModelName = 'v4';
         try { const params = JSON.parse(requestParams); friendlyModelName = modelMap[params.model] || params.model; } catch(e) {}
         const downloadUrl = songData.audioUrl || songData.streamAudioUrl; const filename = `${songData.title || 'track'}.mp3`;
-        card.innerHTML = `<div class="song-cover" id="cover-${songData.id}"><img src="${songData.imageUrl}" alt="Обложка трека"><div class="song-duration" id="duration-${songData.id}">--:--</div><div class="play-icon"><svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M8 5v14l11-7z"></path></svg></div></div><div class="song-info"><div><span class="song-title">${songData.title || 'Без названия'}</span><span class="song-model-tag">${friendlyModelName}</span></div><div class="song-style"><div class="song-style-content" id="style-${songData.id}">${songData.tags || '(no styles)'}</div></div></div><button class="download-button">Скачать</button>`;
+        card.innerHTML = `<div class="song-cover" id="cover-${songData.id}"><img src="${songData.imageUrl}" alt="Обложка трека"><div class="song-duration" id="duration-${songData.id}">${formatTime(songData.duration)}</div><div class="play-icon"><svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M8 5v14l11-7z"></path></svg></div></div><div class="song-info"><div><span class="song-title">${songData.title || 'Без названия'}</span><span class="song-model-tag">${friendlyModelName}</span></div><div class="song-style"><div class="song-style-content" id="style-${songData.id}">${songData.tags || '(no styles)'}</div></div></div><div class="song-actions"><button class="action-button download-button">Скачать</button><button class="action-button lyrics-button">Текст</button></div>`;
         card.querySelector('.song-cover').onclick = () => playSong(songData);
+        const titleEl = card.querySelector('.song-title');
+        titleEl.onclick = () => copyToClipboard(songData.id, titleEl);
         card.querySelector('.download-button').onclick = (e) => downloadSong(e, downloadUrl, filename);
+        card.querySelector('.lyrics-button').onclick = () => showLyrics(songData.prompt);
         songListContainer.prepend(card);
         setTimeout(() => {
             const styleContent = card.querySelector(`#style-${songData.id}`);
@@ -387,8 +435,6 @@
                 styleContent.parentElement.appendChild(toggleBtn);
             }
         }, 10);
-        const tempAudio = new Audio(songData.streamAudioUrl);
-        tempAudio.addEventListener('loadedmetadata', () => { const durationEl = document.getElementById(`duration-${songData.id}`); if (durationEl) durationEl.textContent = formatTime(tempAudio.duration); });
     }
 
     function createPlaceholderCard(taskId) {
@@ -431,8 +477,6 @@
                     updateStatus("✅ Задача выполнена!", true);
                     const placeholder = document.getElementById(`placeholder-${taskId}`);
                     if(placeholder) placeholder.remove();
-                    // Песни теперь сохраняются на бэкенде, нам не нужно их здесь добавлять
-                    // Вместо этого, просто перезагружаем список с сервера
                     await loadSongsFromServer();
                     await handleApiCall("/api/chat/credit", { method: "GET" }, true);
                 } else if (pendingStates.includes(statusLowerCase)) {
@@ -513,18 +557,16 @@
         try {
             const response = await fetch('/api/songs');
             const songs = await response.json();
-            songListContainer.innerHTML = ''; // Очищаем старый список
+            songListContainer.innerHTML = '';
             if (songs.length > 0) {
                 emptyListMessage.style.display = 'none';
                 songs.forEach(songInfo => {
-                    addSongToList(songInfo.songData, songInfo.requestParams);
+                    addSongToList(songInfo.songData, songInfo.requestParams, false);
                 });
             } else {
                 songListContainer.innerHTML = '<p id="empty-list-message">Здесь будут отображаться ваши сгенерированные песни.</p>';
             }
-        } catch(e) {
-            console.error("Не удалось загрузить песни с сервера", e);
-        }
+        } catch(e) { console.error("Не удалось загрузить песни с сервера", e); }
     }
 
     function initializeApp() {
