--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <button class="tab-button active" data-tab="generate">Создать</button>
                     <button class="tab-button" data-tab="extend">Продлить</button>
                     <button class="tab-button" data-tab="upload">Загрузить</button>
+                    <button class="tab-button" data-tab="boost">Boost</button>
                     <button class="tab-button" id="logs-tab-button" data-tab="logs">Логи<span id="logs-notification-dot" class="notification-dot"></span></button>
                 </div>
 
@@ -61,6 +62,8 @@
                 <div id="extend" class="tab-content"><form id="extend-music-form" class="form-grid"><div class="form-group"><label for="e-audioId">Audio ID</label><input type="text" id="e-audioId" placeholder="ID трека для продления" required></div><div class="form-group"><label for="e-continueAt">Продлить с (секунды)</label><input type="number" id="e-continueAt" value="60"></div><div class="form-group"><label for="e-prompt">Новый текст (опционально)</label><textarea id="e-prompt" placeholder="A calm and relaxing piano track..."></textarea></div><button type="submit" class="submit-button">Продлить трек</button></form></div>
                 <div id="upload" class="tab-content"><div class="form-grid"><form id="upload-cover-form" class="form-grid"><div class="form-group"><label for="uc-uploadUrl">URL загруженного аудио</label><input type="text" id="uc-uploadUrl" placeholder="https://storage.example.com/audio.mp3" required></div><div class="form-group"><label for="uc-prompt">Prompt (описание кавера)</label><textarea id="uc-prompt" placeholder="A calm and relaxing piano track..."></textarea></div><button type="submit" class="submit-button">Создать кавер</button></form><hr class="divider"><form id="upload-extend-form" class="form-grid"><div class="form-group"><label for="ue-uploadUrl">URL загруженного аудио</label><input type="text" id="ue-uploadUrl" placeholder="https://storage.example.com/audio.mp3" required></div><div class="form-group"><label for="ue-continueAt">Продлить с (секунды)</label><input type="number" id="ue-continueAt" value="60"></div><button type="submit" class="submit-button">Продлить загруженное</button></form></div></div>
                 
+                <div id="boost" class="tab-content"><form id="boost-style-form" class="form-grid"><div class="form-group"><label for="b-audioId">Audio ID</label><input type="text" id="b-audioId" placeholder="ID трека для улучшения стиля" required></div><button type="submit" class="submit-button">Улучшить стиль</button></form></div>
+
                 <div id="logs" class="tab-content">
                     <div id="logs-content">
                         <h4>Статус операции</h4>
