добавил скрытие плеера

--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
                 <span id="total-duration" class="time-display">0:00</span>
             </div>
         </div>
-        <div id="player-extra-controls"></div>
+        <div id="player-extra-controls">
+            <!-- *** ИЗМЕНЕНИЕ: Добавлена кнопка закрытия плеера *** -->
+            <button class="player-btn" id="close-player-btn"><i class="fas fa-times"></i></button>
+        </div>
     </div>
 
     <div id="lyrics-modal-overlay">
