--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><button class="nav-button" data-view="extend"><i class="fas fa-forward"></i><span>Продлить</span></button></li>
                         <li><button class="nav-button" data-view="upload-extend"><i class="fas fa-wave-square"></i><span>Продлить свое</span></button></li>
                         <li><button class="nav-button" data-view="upload"><i class="fas fa-upload"></i><span>Создать кавер</span></button></li>
-                        <li><button class="nav-button" data-view="boost"><i class="fas fa-star"></i><span>Boost</span></button></li>
+                        <!-- *** ИЗМЕНЕНИЕ: Удалена вкладка Boost *** -->
                         <li><button class="nav-button" data-view="logs" id="logs-nav-button"><i class="fas fa-file-alt"></i><span>Логи</span><span id="logs-notification-dot" class="notification-dot"></span></button></li>
                     </ul>
                 </nav>
@@ -64,7 +64,17 @@
                             <div id="simple-mode-fields" class="form-grid" style="display: none;"><div class="form-group" id="g-song-description-group"><label for="g-song-description">Описание песни</label><textarea id="g-song-description" placeholder="Опишите стиль музыки, тему и настроение..."></textarea><div class="char-counter" id="g-song-description-counter">0/200</div></div></div>
                             <div id="custom-mode-fields" class="form-grid">
                                 <div class="form-group"><label for="g-title">Название</label><input type="text" id="g-title" placeholder="Введите название"><div class="char-counter" id="g-title-counter">0/80</div></div>
-                                <div class="form-group"><label for="g-style">Стиль музыки</label><textarea id="g-style" placeholder="Пример: Pop, Mysterious, Upbeat"></textarea><div class="char-counter" id="g-style-counter">0/1000</div></div>
+                                <!-- *** ИЗМЕНЕНИЕ: Добавлена обертка и кнопка для поля стиля *** -->
+                                <div class="form-group">
+                                    <label for="g-style">Стиль музыки</label>
+                                    <div class="style-input-container">
+                                        <textarea id="g-style" placeholder="Пример: Pop, Mysterious, Upbeat"></textarea>
+                                        <button type="button" id="boost-style-button" class="input-action-btn" title="Улучшить стиль (Boost)">
+                                            <i class="fas fa-wand-magic-sparkles"></i>
+                                        </button>
+                                    </div>
+                                    <div class="char-counter" id="g-style-counter">0/1000</div>
+                                </div>
                                 <div class="form-group" id="g-prompt-group"><label for="g-prompt">Текст песни</label><textarea id="g-prompt"></textarea><div class="char-counter" id="g-prompt-counter">0/5000</div></div>
                                 <hr class="divider">
                                 <label class="toggle-switch"><input type="checkbox" id="g-instrumental"><span class="slider"></span><span>Инструментал</span></label>
@@ -83,7 +93,7 @@
 
                 <div id="upload" class="view-content"><div class="view-header"><h2>Создать кавер</h2><p>Создайте кавер на собственный аудиофайл по ссылке.</p></div><form id="upload-cover-form"><div class="form-grid"><div class="form-group"><label for="uc-uploadUrl">URL загруженного аудио</label><input type="text" id="uc-uploadUrl" placeholder="https://storage.example.com/audio.mp3" required></div><div class="form-group"><label for="uc-title">Название</label><input type="text" id="uc-title" placeholder="Введите название кавера"></div><div class="form-group"><label for="uc-style">Стиль музыки</label><textarea id="uc-style" placeholder="Pop, Mysterious, Upbeat"></textarea></div><div class="form-group"><label for="uc-prompt">Prompt (описание кавера)</label><textarea id="uc-prompt" placeholder="A calm and relaxing piano track..."></textarea></div><label class="toggle-switch"><input type="checkbox" id="uc-instrumental"><span class="slider"></span><span>Инструментал</span></label><div class="form-group"><label for="uc-negativeTags">Негативные теги</label><input type="text" id="uc-negativeTags" placeholder="Heavy Metal, Upbeat Drums"></div><details class="advanced-options"><summary>Дополнительно</summary><div class="form-group slider-group"><label for="uc-styleWeight">Сила стиля</label><input type="range" id="uc-styleWeight" min="0" max="1" step="0.05" value="0.65"><span class="slider-value">0.65</span></div><div class="form-group slider-group"><label for="uc-weirdnessConstraint">Креативность</label><input type="range" id="uc-weirdnessConstraint" min="0" max="1" step="0.05" value="0.65"><span class="slider-value">0.65</span></div><div class="form-group slider-group"><label for="uc-audioWeight">Следование оригиналу</label><input type="range" id="uc-audioWeight" min="0" max="1" step="0.05" value="0.65"><span class="slider-value">0.65</span></div></details></div><button type="submit" class="submit-button">Создать кавер</button></form></div>
                 
-                <div id="boost" class="view-content"><div class="view-header"><h2>Boost Style</h2><p>Улучшите описание стиля для более точных результатов.</p></div><form id="boost-style-form"><div class="form-grid"><div class="form-group"><label for="b-style-content">Описание стиля для улучшения</label><input type="text" id="b-style-content" placeholder="Пример: Pop, Mysterious" required></div></div><button type="submit" class="submit-button">Улучшить стиль</button></form></div>
+                <!-- *** ИЗМЕНЕНИЕ: Удалена вся секция для view-content "boost" *** -->
 
                 <div id="logs" class="view-content">
                     <div class="view-header"><h2>Логи операций</h2><p>Здесь отображается статус и ответы от API в реальном времени.</p></div>
@@ -131,7 +141,6 @@
             </div>
         </div>
         <div id="player-extra-controls">
-            <!-- *** ИЗМЕНЕНИЕ: Добавлена кнопка закрытия плеера *** -->
             <button class="player-btn" id="close-player-btn"><i class="fas fa-times"></i></button>
         </div>
     </div>
