изменил иконку возврата, изменил логику синхронизации, фиксы

--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
         <div id="lyrics-modal-box">
             <button id="lyrics-modal-close">&times;</button>
             <div id="lyrics-modal-content"></div>
-            <!-- *** ИЗМЕНЕНИЕ: Добавлена кнопка возврата к активному слову *** -->
-            <button id="return-to-active-lyric-btn" class="fab-button"><i class="fas fa-crosshairs"></i></button>
+            <button id="return-to-active-lyric-btn" class="fab-button"><i class="fas fa-clock"></i></button>
         </div>
     </div>
 
